# csvcubed-devtools

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: build.yaml  increment-versions.yaml
src/csvcubeddevtools/behaviour/: csv2rdf.py  csvlint.py  csvwcheck.py  dockerornot.py  file.py  rdf.py  sparqltests.py
src/csvcubeddevtools/helpers/: csvwhelpers.py  shell.py
tests/behaviour/: csv2rdf.feature
tests/behaviour/steps/: devtoolsimports.py
tests/test-cases/csv2rdf/: data.csv-metadata.json
tests/test-cases/eurovision-csvw/: all.ttl  incomplete.ttl
tests/test-cases/invalid-csvw/: year.csv-metadata.json
tests/unit/behaviour-steps/: csvlint.py  test_csv2rdf.py  test_csvlint.py  test_sparql_test_runner.py
