[tool.poetry]
authors = ["Integrated Data Service - Dissemination <csvcubed@gsscogs.uk>"]
description = "Development tools and dependencies for use in the csvcubed tooling."
exclude = ["docs/*"]
license = "Apache-2.0"
name = "csvcubed-devtools"
packages = [
  {include = "csvcubeddevtools", from = "src"},
]
readme = "README.md"
version = "0.1.8-rc11"

[tool.poetry.dependencies]
behave = "*"
black = "*"
chardet = "*"
csvw = "*"
docker = "*"
pytest = "*"
python = "^3.9"
python-dateutil = "*"
rdflib = ">=6.0.0"
sphinx = "*"
sphinx-book-theme = "*"
tox = "^3.24.4"
# docker depends on pywin32 - https://github.com/advisories/GHSA-hwfp-hg2m-9vr2
# this is mainly to stop dependabot stop moaning since we don't use win32 for development
pywin32 = { version = ">=301", markers = "sys_platform == 'win32'"}
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pyright]
exclude = [
  ".venv",
  "src/csvcubeddevtools/behaviour",
]
pythonVersion = "3.10"
